--- a/Tokyorevengers.theme.css
+++ b/Tokyorevengers.theme.css
@@ -6,4 +6,4 @@
  * @source https://github.com/mathpcd/Tokyo-Revengers
  */
 
-  @import url('https://raw.githubusercontent.com/mathpcd/Tokyo-Revengers/main/base.css');
+  @import url('https://mathpcd.github.io/Tokyo-Revengers/base.css');
