--- a/base.css
+++ b/base.css
@@ -2411,7 +2411,7 @@
 
 ::-webkit-scrollbar-thumb {
   background-color: #ffffff !important;
-  outline: 1px solid slategrey;
+  outline: 1px solid black;
 }
 
 .replying-1x3H0T:before {
