--- a/base.css
+++ b/base.css
@@ -1,11 +1,11 @@
 .app-2rEoOp {
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 33%, rgba(0, 0, 0, 0.5) 70%), url(https://wallpapercave.com/wp/wp5683083.jpg);
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 33%, rgba(0, 0, 0, 0.5) 70%), url(https://pbs.twimg.com/media/D3t_RDxXkAE2PY0.jpg:large);
   background-size: cover;
   border: 0px;
 }
 
 .standardSidebarView-3F1I7i {
-  background-image: url(https://wallpapercave.com/wp/wp5683083.jpg);
+  background-image: url(https://pbs.twimg.com/media/D3t_RDxXkAE2PY0.jpg:large);
   background-size: cover;
 }
 
